# WonsAppleGame_VideoCapture

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  apple_detection.cpp  apple_detection.hpp  main.cpp  utils.cpp  utils.hpp  video_capture.cpp  video_capture.hpp  video_display.cpp  video_display.hpp
cmake/: copy_dlls.cmake
model/: apples.onnx  best.onnx
